--- a/src/Component/Banner/Banner.css
+++ b/src/Component/Banner/Banner.css
@@ -1,8 +1,10 @@
+
+
 .banner-image {
     background-image: url("https://cdn.pixabay.com/photo/2014/02/09/05/40/maldives-262516_960_720.jpg")
     ,
       linear-gradient(rgba(36, 35, 35, 0.87), rgb(54, 52, 52));
-    height: 60vh;
+    height: 70vh;
     width: 100%;
     background-size: cover;
     background-position: center;
@@ -15,7 +17,7 @@
     top: 35%;
 }
 .title h1 {
-  font-size: 50px;
-  color: white;
+  font-size: 60px;
+  font-weight: bolder;
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
